# sq

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Dockerfile  Makefile  Makefile_std.mk  README.md  TODO  alltags.txt  eclipse_make_wrapper.py  generate_debug_scripts.cmake  non-ota-partitions.csv  partitions.csv  repo.xml  sdkconfig  sdkconfig.defaults  sdkconfig_minimal  squeezelite.cmake  version.txt  writeSequeezeEsp.bat  writeSequeezeEsp.sh
.github/workflows/: CrossBuild.yml  ESP32-A1S.yml  I2S-4MBFlash.yml  SqueezeAmp.yml  cmake.yml  codeql-analysis.yml
build-scripts/: 16M-sdkconfig.defaults  ESP32-A1S-sdkconfig.defaults  I2S-16MFlash-sdkconfig.defaults  I2S-4MFlash-sdkconfig.defaults  NonOTA-16M-sdkconfig.defaults  NonOTA-I2S-16MFlash-sdkconfig.defaults  NonOTA-I2S-4MFlash-sdkconfig.defaults  NonOTA-SqueezeAmp-sdkconfig.defaults  OTA-I2S-16MFlash-sdkconfig.defaults  OTA-I2S-4MFlash-sdkconfig.defaults  SqueezeAmp-sdkconfig.defaults  SqueezeAmp4MBFlash-sdkconfig.defaults  SqueezeAmp8MBFlash-sdkconfig.defaults  sdkconfig  squeezelite-esp32-16M-sdkconfig.defaults  squeezelite-esp32-I2S-16MFlash-sdkconfig.defaults  squeezelite-esp32-I2S-4MFlash-NOAirplay-sdkconfig.defaults  squeezelite-esp32-I2S-4MFlash-sdkconfig.defaults  squeezelite-esp32-SqueezeAmp-sdkconfig.defaults
components/audio/: CMakeLists.txt
components/audio_controls/: audio_controls.c  audio_controls.h  buttons.c  buttons.h
components/bluetooth/: bt_app_sink.c  bt_app_source.c  platform_bt_sink.c  platform_bt_sink.h  platform_bt_source.c
components/cmd_i2c/: CMakeLists.txt  cmd_i2ctools.c  component.mk
components/cmd_nvs/: cmd_nvs.c  cmd_nvs.h  component.mk
components/cmd_system/: cmd_system.c  cmd_system.h  component.mk
components/codecs/: CMakeLists.txt  component.mk
components/codecs/inc/alac/: alac_wrapper.h
components/config/: config.c  config.h  nvs_utilities.c
components/display/: CMakeLists.txt  ILI9341.c  SH1106.c  SSD1306.c  SSD132x.c  SSD1351.c  ST77xx.c  component.mk  display.c  display.h  driver_SSD1306.c  driver_SSD13x6.c  text.c
components/display/core/: gds.c  gds.h  gds_draw.c  gds_draw.h  gds_draw_ext.c  gds_font.c  gds_image.c  gds_private.h  gds_text.c
components/display/core/ifaces/: default_if_i2c.c  default_if_spi.c
components/display/tarablessd1306/: ssd1306.c
components/display/tarablessd1306/ifaces/: default_if_i2c.c
components/display/tarablessd13x6/: ssd13x6.c  ssd13x6.h  ssd13x6_default_if.h  ssd13x6_draw.c  ssd13x6_draw.h  ssd13x6_err.h  ssd13x6_font.c  ssd13x6_font.h
components/display/tarablessd13x6/fonts/: font_droid_sans_fallback_11x13.c  font_droid_sans_fallback_15x17.c  font_droid_sans_fallback_24x28.c  font_droid_sans_mono_7x13.c  font_liberation_mono_13x21.c  font_liberation_mono_17x30.c  font_liberation_mono_9x15.c  font_line_1.c  font_tarable7seg_16x32.c
components/display/tarablessd13x6/ifaces/: default_if_i2c.c  default_if_spi.c
components/driver_bt/: CMakeLists.txt  bt_app_core.c  bt_app_sink.c  bt_app_sink.h  bt_app_source.c  component.mk
components/driver_i2s/: component.mk
components/io/: led.c
components/platform_bluetooth/: CMakeLists.txt  platform_bt_core.c
components/platform_config/: CMakeLists.txt  platform_config.c  platform_config.h
components/platform_console/: CMakeLists.txt  cmd_config.c  cmd_decl.h  cmd_i2ctools.c  cmd_nvs.c  cmd_squeezelite.c  cmd_system.c  cmd_wifi.c  platform_console.c  platform_console.h
components/platform_console/app_recovery/: CMakeLists.txt  application_name.h  recovery.c
components/platform_console/app_squeezelite/: CMakeLists.txt  application_name.h  cmd_squeezelite.c
components/platform_display/: CMakeLists.txt
components/platform_display/core/: gds_private.h
components/raop/: CMakeLists.txt  component.mk  platform.h  raop.c  raop.h  raop_sink.c  raop_sink.h  rtp.c  rtp.h  util.c  util.h
components/services/: CMakeLists.txt  accessors.c  accessors.h  audio_controls.c  i2s.c  (+18 more)
components/squeezelite/: CMakeLists.txt  adac.h  adac_core.c  alac.c  buffer.c  component.mk  controls.c  decode.c  decode_external.c  display.c  displayer.c  embedded.c  embedded.h  equalizer.c  equalizer.h  flac.c  helix-aac.c  mad.c  main.c  opus.c  output.c  output_bt.c  output_embedded.c  output_i2s.c  output_pack.c  output_visu.c  slimproto.c  squeezelite.h  stream.c  vorbis.c
components/squeezelite/a1s/: ac101.c  ac101.h
components/squeezelite/ac101/: ac101.c
components/squeezelite/null/: dac_null.c
components/squeezelite/tas57xx/: dac_5713.c  dac_57xx.c
components/squeezelite/wm8978/: wm8978.c
components/wifi-manager/: .gitignore  CMakeLists.txt  _esp_http_server.h  _esp_httpd_main.c  code.js  commands.json  component.mk  config.json  dns_server.c  dns_server.h  http_server.c  http_server.h  http_server_handlers.c  http_server_handlers.h  index.development.html  index.html  messages.json  status-messages.json  status.json  style.css  wifi_manager.c  wifi_manager.h  wifi_manager_http_server.c
components/wifi-manager/res/: code.js
components/wifi-manager/webapp/: .eslintcache  package.json  webapp.cmake  webpack.c  webpack.h
components/wifi-manager/webapp/mock/: commands.json  messages.json  messages_ota.json  status.json
components/wifi-manager/webapp/src/: index.ejs  index.ts  test.ejs
components/wifi-manager/webapp/src/js/: custom.js
components/wifi-manager/webapp/src/sass/layout/: _features.scss
components/wifi-manager/webapp/src/sass/setup/: _normalize.scss
components/wifi-manager/webapp/src/sass/utils/: _mixins.scss  _style.css
components/wifi-manager/webapp/webpack/: webpack.common.js  webpack.dev.js  webpack.prod.js
main/: CMakeLists.txt  Kconfig.projbuild  cmd_squeezelite.c  cmd_wifi.c  component.mk  config.c  config.h  console.c  esp_app_main.c  nvs_utilities.c  nvs_utilities.h  platform_esp32.h
plugin/: Player.pm  Plugin.pm  Text.pm  repo.xml  strings.txt
server_certs/: DigiCertTLSHybridECCSHA3842020CA1.crt  digicert.txt  getcert.sh  github-com.pem  github.pem  githubusercontent-com.pem  s3-amazon-com.pem  s3_amazon.pem  s3_amazon.txt
(+48 files in other folders)
